--- a/StorhaugenWebsite/StorhaugenWebsite.csproj
+++ b/StorhaugenWebsite/StorhaugenWebsite.csproj
@@ -24,4 +24,10 @@
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\.nojekyll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
