--- a/StorhaugenWebsite/wwwroot/manifest.json
+++ b/StorhaugenWebsite/wwwroot/manifest.json
@@ -1,21 +1,15 @@
 {
   "name": "Storhaugen Eats",
   "short_name": "Storhaugen",
-  "description": "Family food rating app for the Storhaugen family",
-  "start_url": "/",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#0f172a",
   "theme_color": "#0f172a",
-  "orientation": "portrait",
+  "scope": "/StorhaugenWebsite/",
   "icons": [
     {
       "src": "icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
       "type": "image/png"
     }
   ]
