--- a/StorhaugenWebsite/StorhaugenWebsite.csproj
+++ b/StorhaugenWebsite/StorhaugenWebsite.csproj
@@ -8,8 +8,7 @@
   </PropertyGroup>
 
 	<Target Name="Make404" AfterTargets="Publish">
-		<Copy SourceFiles="$(PublishDir)wwwroot\index.html"
-			  DestinationFiles="$(PublishDir)wwwroot\404.html" />
+		<Copy SourceFiles="$(PublishDir)wwwroot\index.html" DestinationFiles="$(PublishDir)wwwroot\404.html" />
 	</Target>
 
   <ItemGroup>
@@ -22,8 +21,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="10.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="10.0.0" PrivateAssets="all" />
     <PackageReference Include="MudBlazor" Version="8.15.0" />
-    <PackageReference Include="supabase-csharp" Version="1.4.1" />
-    <PackageReference Include="Supabase.Gotrue" Version="7.5.0" />
+	  
+	<PackageReference Include="Supabase" Version="1.1.1" />
+	<PackageReference Include="Supabase.Gotrue" Version="6.0.3" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Components\" />
