Frontend now on dotnet 10. attempt login state fix re-added theme selector

--- a/StorhaugenWebsite/StorhaugenWebsite.csproj
+++ b/StorhaugenWebsite/StorhaugenWebsite.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <OverrideHtmlAssetPlaceholders>true</OverrideHtmlAssetPlaceholders>
@@ -18,14 +18,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.0" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="10.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="10.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="10.0.0" PrivateAssets="all" />
     <PackageReference Include="MudBlazor" Version="8.15.0" />
 	  
 	<PackageReference Include="Supabase" Version="1.1.1" />
 	<PackageReference Include="Supabase.Gotrue" Version="6.0.3" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Brokers\" />
     <Folder Include="Components\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
