Refactored Services to be in own Folders backend and frontend now share 1 common DTO project (.Shared) Fixed bugs related to refactor

--- a/StorhaugenWebsite/StorhaugenWebsite.csproj
+++ b/StorhaugenWebsite/StorhaugenWebsite.csproj
@@ -38,4 +38,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StorhaugenWebsite.Shared\StorhaugenWebsite.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
