--- a/StorhaugenEats.API/StorhaugenEats.API.csproj
+++ b/StorhaugenEats.API/StorhaugenEats.API.csproj
@@ -34,4 +34,8 @@
     <PackageReference Include="System.Text.Json" Version="10.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StorhaugenWebsite.Shared\StorhaugenWebsite.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
