Harden Supabase storage image downloads

--- a/StorhaugenEats.API/appsettings.json
+++ b/StorhaugenEats.API/appsettings.json
@@ -20,5 +20,13 @@
     "BaseUrl": "https://www.hellofresh.no",
     "SyncIntervalHours": 24,
     "WeeksToFetch": 4
+  },
+  "Storage": {
+    "AllowedImageHosts": [
+      "localhost",
+      "127.0.0.1"
+    ],
+    "MaxDownloadBytes": 5242880,
+    "DownloadTimeoutSeconds": 10
   }
 }
